added the some code in typography

--- a/Typography/style.css
+++ b/Typography/style.css
@@ -7,21 +7,34 @@ html {
 }
 
 body {
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-header h1 {
-  text-align: center;
-  margin: -4px 0;
-}
-.bold {
-  font-weight: 800;
-}
 .label {
   border: 2px solid black;
   width: 270px;
   margin: 20px auto;
   padding: 0 7px;
+}
+
+header h1 {
+  text-align: center;
+  margin: -4px 0;
+  letter-spacing: 0.15px;
+}
+
+p {
+  margin: 0;
+}
+
+.divider {
+  border-bottom: 1px solid #888989;
+  margin: 2px 0;
+  clear: right;
+}
+
+.bold {
+  font-weight: 800;
 }
 
 .right {
@@ -31,10 +44,15 @@ header h1 {
 .lg {
   height: 10px;
 }
+
 .lg,
 .md {
   background-color: black;
   border: 0;
+}
+
+.md {
+  height: 5px;
 }
 
 .sm-text {
@@ -45,11 +63,12 @@ header h1 {
   margin: -5px -2px;
   overflow: hidden;
 }
+
 .calories-info span {
   font-size: 1.2em;
   margin-top: -7px;
 }
 
-.md {
-  height: 5px;
+.indent {
+  margin-left: 1em;
 }
