--- a/Typography/style.css
+++ b/Typography/style.css
@@ -72,3 +72,11 @@ p {
 .indent {
   margin-left: 1em;
 }
+
+.daily-value p:not(.no-divider) {
+  border-bottom: 1px solid #888989;
+}
+
+/* .dbl-indent {
+  margin: 2em;
+} */
