--- a/Quiz site/styles.css
+++ b/Quiz site/styles.css
@@ -13,14 +13,25 @@ body {
 }
 header {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #1b1b32;
   height: 50px;
   width: 100%;
+
+  /* to fix it on top */
+  position: fixed;
+  top: 0;
+}
+
+main {
+  padding-top: 50px;
 }
 
 h1 {
   color: #f1be32;
   font-size: min(5vw, 1.2em);
+  text-align: center;
 }
 h1,
 h2 {
@@ -40,6 +51,22 @@ nav ul {
   color: #f5f6f7;
   list-style: none;
   justify-content: space-evenly;
+}
+nav li {
+  color: #dfdfe2;
+  margin: 0 0.2rem;
+  padding: 0.2rem;
+  display: block;
+}
+nav li:hover {
+  background-color: #dfdfe2;
+  color: #1b1b32;
+  cursor: pointer;
+}
+
+li a {
+  color: inherit;
+  text-decoration: none;
 }
 .sr-only {
   position: absolute;
