--- a/Balance Sheet/styles.css
+++ b/Balance Sheet/styles.css
@@ -1,13 +1,3 @@
-html {
-  box-sizing: border-box;
-  color: rgb(29, 54, 27);
-}
-
-body {
-  font-family: sans-serif;
-  color: #0a0a23;
-}
-
 span[class~="sr-only"] {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important;
@@ -20,6 +10,15 @@ span[class~="sr-only"] {
   white-space: nowrap !important;
   padding: 0 !important;
   margin: -1px !important;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  color: #0a0a23;
 }
 
 h1 {
@@ -37,6 +36,7 @@ h1 .flex {
 h1 .flex span:first-of-type {
   font-size: 0.7em;
 }
+
 h1 .flex span:last-of-type {
   font-size: 1.2em;
 }
@@ -52,23 +52,105 @@ section {
   justify-content: flex-end;
   position: sticky;
   top: 0;
+  background: #0a0a23;
   color: #fff;
-  background-color: #0a0a23;
   z-index: 999;
-  margin: 0 -2px;
   padding: 0.5rem calc(1.25rem + 2px) 0.5rem 0;
+  margin: 0 -2px;
 }
 
 #years span[class] {
-  text-align: right;
-  width: 4.5rem;
   font-weight: bold;
+  width: 4.5rem;
+  text-align: right;
 }
 
 .table-wrap {
   padding: 0 0.75rem 1.5rem 0.75rem;
 }
 
-span:not(.sr-only) {
+table {
+  border-collapse: collapse;
+  border: 0;
+  width: 100%;
+  position: relative;
+  margin-top: 3rem;
+}
+
+table caption {
+  color: #356eaf;
+  font-size: 1.3em;
   font-weight: normal;
+  position: absolute;
+  top: -2.25rem;
+  left: 0.5rem;
+}
+
+tbody td {
+  width: 100vw;
+  min-width: 4rem;
+  max-width: 4rem;
+}
+
+tbody th {
+  width: calc(100% - 12rem);
+}
+
+tr[class="total"] {
+  border-bottom: 4px double #0a0a23;
+  font-weight: bold;
+}
+
+tr[class="total"] th {
+  text-align: left;
+  padding: 0.5rem 0 0.25rem 0.5rem;
+}
+
+tr.total td {
+  text-align: right;
+  padding: 0 0.25rem;
+}
+
+tr.total td:nth-of-type(3) {
+  padding-right: 0.5rem;
+}
+
+tr.total:hover {
+  background-color: #99c9ff;
+}
+
+td.current {
+  font-style: italic;
+}
+
+tr.data {
+  background-image: linear-gradient(
+    to bottom,
+    #dfdfe2 1.845rem,
+    white 1.845rem
+  );
+}
+
+tr.data th {
+  text-align: left;
+  padding-top: 0.3rem;
+  padding-left: 0.5rem;
+}
+
+tr.data th .description {
+  display: block;
+  font-weight: normal;
+  font-style: italic;
+  padding: 1rem 0 0.75rem;
+  margin-right: -13.5rem;
+}
+
+tr.data td {
+  vertical-align: top;
+  padding: 0.3rem 0.25rem 0;
+  text-align: right;
+}
+
+tr.data td:last-of-type {
+  padding-right: 0.5rem;
 }
