--- a/CSS Grid/styles.css
+++ b/CSS Grid/styles.css
@@ -43,5 +43,52 @@ main {
 }
 
 .heading {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.5rem;
   grid-column: 2/3;
+}
+
+.hero {
+  grid-column: 1/-1;
+  position: relative;
+}
+.text {
+  grid-column: 2/3;
+}
+
+img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.hero-title {
+  text-align: center;
+  color: orangered;
+  font-size: 8rem;
+}
+.hero-subtitle {
+  text-align: center;
+  color: orangered;
+  font-size: 2.4rem;
+}
+.author {
+  font-size: 2rem;
+  font-family: Raleway, sans-serif;
+}
+
+.author-name a:hover {
+  background-color: #306203;
+}
+
+.publish-date {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.social-icons {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  font-size: 3rem;
 }
