--- a/CSS Grid/styles.css
+++ b/CSS Grid/styles.css
@@ -1,6 +1,6 @@
 *,
-::after,
-::before {
+::before,
+::after {
   padding: 0;
   margin: 0;
 }
@@ -11,13 +11,13 @@ html {
 }
 
 body {
-  font-family: Baskervville, serif;
+  font-family: "Baskervville", serif;
   color: linen;
   background-color: rgb(20, 30, 40);
 }
 
 h1 {
-  font-family: Anton, sans-serif;
+  font-family: "Anton", sans-serif;
 }
 
 h2,
@@ -25,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 a {
@@ -42,24 +42,34 @@ main {
   row-gap: 3rem;
 }
 
-.heading {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 1.5rem;
-  grid-column: 2/3;
-}
-
-.hero {
-  grid-column: 1/-1;
-  position: relative;
-}
-.text {
-  grid-column: 2/3;
-}
-
 img {
   width: 100%;
   object-fit: cover;
+}
+
+hr {
+  margin: 1.5rem 0;
+  border: 1px solid rgba(120, 120, 120, 0.6);
+}
+
+.heading {
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.5rem;
+}
+
+.text {
+  grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
+  column-width: 25rem;
+  text-align: justify;
+}
+
+.hero {
+  grid-column: 1 / -1;
+  position: relative;
 }
 
 .hero-title {
@@ -67,14 +77,16 @@ img {
   color: orangered;
   font-size: 8rem;
 }
+
 .hero-subtitle {
-  text-align: center;
-  color: orangered;
   font-size: 2.4rem;
+  color: orangered;
+  text-align: center;
 }
+
 .author {
   font-size: 2rem;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .author-name a:hover {
@@ -87,8 +99,37 @@ img {
 
 .social-icons {
   display: grid;
+  font-size: 3rem;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
-  font-size: 3rem;
+  align-items: center;
+}
+
+.first-paragraph::first-letter {
+  font-size: 6rem;
+  color: orangered;
+  float: left;
+  margin-right: 1rem;
+}
+
+.quote {
+  color: #00beef;
+  font-size: 2.4rem;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+}
+
+.quote::before {
+  content: '" ';
+}
+
+.quote::after {
+  content: ' "';
+}
+
+.text-with-images {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 3rem;
 }
